--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" href="#">PlayHaven</a>
 
-    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+    <ul *ngIf="loggedIn" class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -13,10 +13,39 @@
         <a class="nav-link" href="#">Messages</a>
       </li>
     </ul>
-    <form class="d-flex">
-      <input class="form-control me-2" type="text" placeholder="Username" />
-      <input class="form-control me-2" type="password" placeholder="Password" />
-      <button class="btn btn-outline-success" type="submit">Search</button>
+
+    <div class="dropdown" dropdown *ngIf="loggedIn">
+      <a dropdownToggle class="dropdown-toggle text-light text-decoration-none"
+        >Welcome User</a
+      >
+      <div *dropdownMenu class="dropdown-menu">
+        <a class="dropdown-item">Edit Profile</a>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
+      </div>
+    </div>
+
+    <form
+      *ngIf="!loggedIn"
+      #loginForm="ngForm"
+      class="d-flex"
+      (ngSubmit)="login()"
+      autocomplete="off"
+    >
+      <input
+        name="username"
+        [(ngModel)]="model.username"
+        class="form-control me-2"
+        type="text"
+        placeholder="Username"
+      />
+      <input
+        name="password"
+        [(ngModel)]="model.password"
+        class="form-control me-2"
+        type="password"
+        placeholder="Password"
+      />
+      <button class="btn btn-outline-success" type="submit">Login</button>
     </form>
   </div>
 </nav>
