--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,10 @@
   <div class="container">
     <a class="navbar-brand" href="#">PlayHaven</a>
 
-    <ul *ngIf="loggedIn" class="navbar-nav me-auto mb-2 mb-md-0">
+    <ul
+      *ngIf="accountService.currentUser$ | async"
+      class="navbar-nav me-auto mb-2 mb-md-0"
+    >
       <li class="nav-item">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -14,7 +17,7 @@
       </li>
     </ul>
 
-    <div class="dropdown" dropdown *ngIf="loggedIn">
+    <div class="dropdown" dropdown *ngIf="accountService.currentUser$ | async">
       <a dropdownToggle class="dropdown-toggle text-light text-decoration-none"
         >Welcome User</a
       >
@@ -25,7 +28,7 @@
     </div>
 
     <form
-      *ngIf="!loggedIn"
+      *ngIf="!(accountService.currentUser$ | async)"
       #loginForm="ngForm"
       class="d-flex"
       (ngSubmit)="login()"
